# ML-Lab

./: .gitignore  README.md  REPORT.md  augment.py  augment_images.py  convert_dataset_to_png.py  gps_map.html  pipeline.py  pyproject.toml  upload_bus_to_r2.py
annotator/: .env.example  README.md  package-lock.json  package.json  render.yaml
annotator/annotations/: parking_lot.json
annotator/app/: globals.css  layout.tsx  page.tsx  providers.tsx
annotator/app/api/admin/: route.ts
annotator/app/api/annotations/[...filename]/: route.ts
annotator/app/api/images/: route.ts
annotator/app/api/labels/: route.ts
annotator/app/api/stats/: route.ts
annotator/app/api/upload/: route.ts
annotator/components/: color-picker.tsx
annotator/components/panels/: adjustments-panel.tsx  annotations-list.tsx  labels-panel.tsx  properties-panel.tsx  review-panel.tsx  shortcuts-dialog.tsx
annotator/exports/: classes.txt  coco_export.json  sample_001.txt  sample_005.txt
annotator/lib/: r2.ts  storage.ts  types.ts
annotator/scripts/: clear-r2.mjs  seed-r2.mjs  upload-dataset.mjs
model/: naive_bayes_model.joblib  preprocess.py  svm_model.joblib  train_customised_cnn.py  train_logistic.py  train_naive_bayes.py  train_resnet.py  train_svm.py
predictor/: README.md  app_streamlit.py  pyproject.toml
predictor/.streamlit/: config.toml
predictor/model/: data_utils.py  logistic_model.joblib
predictor/predictor_app/: __init__.py  config.py  explain.py  inference.py  preprocess.py  torch_models.py
predictor/predictor_app/ui/: __init__.py  components.py  theme.py
(+9 files in other folders)
