[project]
name = "ml-pipeline"
version = "0.1.0"
description = "Bus/Legua safety classifier"
authors = [
    {name = "CREVIOS"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn (>=1.8.0,<2.0.0)",
    "scikit-image (>=0.26.0,<0.27.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
